[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
axum-macros = "0.2"
tokio = { version = "1.18", features = ["rt-multi-thread", "macros"] }
rust-embed = { version = "6.4", features = ["interpolate-folder-path"] }
beater = { git = "https://github.com/beater-rs/beater" }
librespot-core = { git = "https://github.com/beater-rs/librespot", branch = "new-api" }
once_cell = "1.12"
axum-auth = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
wasm-pack = "0.10"
